Changelog 5.5.1 (2025-02-14)
----------------------------
* Use Long in maxAge(Matcher<? super Integer> maxAgeMatcher) (thanks to julianladisch for PR)
* Fix so that GZIP doesn't become gzıp for Turkish environments (thanks to rdmrtn for PR)
* Upgraded jakarta.jakartaee-web-api to version 10.0.0 (#1800)

Changelog 5.5.0 (2024-07-05)
----------------------------
* Removing custom validation of pathParams in the mock-mvc module and instead rely on the Spring implementation(issue 1782) (thanks to taeyeon-Kim for pull request)
* Fixing "Error java.lang.NoSuchMethodError for HttpMethod.resolve()" in mock-mvc module (issue 1760) (thanks to d0vi for pull request)
* Fix #1707: SVG file upload - fatal error :1:1: content is not allowed in prolog (#1777) (thanks to Byounghee kim for pull request)
* Fix #1773: Remove check for response HTTP status code. (thanks to macmon for pull request)
* Introducing the "scala-extensions" module for Scala 3 (#1770). This means that you can write tests like this in Scala 3:

    @Test
    def `extraction with rest assured scala extensions`: Unit =
        val message: String = Given(req =>
            req.port(7000)
            req.header("Header", "Header")
            req.body("hello")
        )
        .When(
            _.put("/the/path")
        )
        .Extract(
            _.path("message")
        )
    assertThat(message).isEqualTo("Hello World")
  (thanks to Carlos Eduardo for pull request)
* Remove deprecated Content-Transfer-Encoding from multipart post headers (#1762) (thanks to Michal Trna for pull request)
* Fixed pathParams double encoding in mock-mvd module (#1756) (thanks to Dmitry Kaukov for pull request)
* Upgraded Groovy from version 4.0.16 to 4.0.22
* Upgraded Jackson from version 2.14.3 to 2.17.1
* Upgraded kotlin extension module to use Kotlin 2.0.0 (previously 1.9.20 was used)
* Upgraded Guava library from 32.0.1-jre to 33.2.1-jre

Changelog 5.4.0 (2023-12-08)
----------------------------