@@ -32,7 +32,6 @@ import java.util.ArrayList;
 import java.util.List;
 
 import static io.restassured.internal.common.assertion.AssertParameter.notNull;
-import static java.lang.String.format;
 import static org.apache.commons.lang3.StringUtils.trim;
 import static org.apache.http.HttpHeaders.CONTENT_TYPE;
 
@@ -62,6 +61,7 @@ public class ResponseBuilder {
             restAssuredResponse.setRpr(raResponse.getRpr());
             restAssuredResponse.setLogRepository(raResponse.getLogRepository());
             restAssuredResponse.setFilterContextProperties(raResponse.getFilterContextProperties());
+            restAssuredResponse.setApacheHttpContext(raResponse.getApacheHttpContext());
         } else {
             restAssuredResponse.setContent(response.asInputStream());
         }
